--- a/.github/workflows/depviz.yml
+++ b/.github/workflows/depviz.yml
@@ -12,22 +12,21 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: 'depviz-generate'
-      # fetch
-      - uses: Doozers/depviz-action@b726dac85c42582e815d7b62968269942b022ad3
-
+      # fetch only
+      - uses: moul/depviz-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           targets: 'moul/depviz-test gnolang/roadmap'
       
       # gen roadmap1.json
-      - uses: Doozers/depviz-action@b726dac85c42582e815d7b62968269942b022ad3
+      - uses: moul/depviz-action@v1
         with:
           targets: 'gnolang/roadmap'
           json-output: 'roadmap1.json'
 
       # gen roadmap2.json
-      - uses: Doozers/depviz-action@b726dac85c42582e815d7b62968269942b022ad3
+      - uses: moul/depviz-action@v1
         with:
           targets: 'moul/depviz-test'
           json-output: 'roadmap2.json'
