--- a/.github/workflows/depviz.yml
+++ b/.github/workflows/depviz.yml
@@ -13,20 +13,20 @@ jobs:
         with:
           ref: 'depviz-generate'
       # fetch only
-      - uses: moul/depviz-action@v1
+      - uses: moul/depviz-action@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           targets: 'moul/depviz-test gnolang/roadmap'
       
       # gen roadmap1.json
-      - uses: moul/depviz-action@v1
+      - uses: moul/depviz-action@main
         with:
           targets: 'gnolang/roadmap'
           json-output: 'roadmap1.json'
 
       # gen roadmap2.json
-      - uses: moul/depviz-action@v1
+      - uses: moul/depviz-action@main
         with:
           targets: 'moul/depviz-test'
           json-output: 'roadmap2.json'
